--- a/src/components/carousel/carousel.css
+++ b/src/components/carousel/carousel.css
@@ -1,5 +1,7 @@
 .overlay {
     background: #3a3a3a;
+    background-repeat: no-repeat;
+    background-size: cover;
     width: 100%;
     height: 500px;
     display: flex;
@@ -10,6 +12,7 @@
 
 .overlay .tile-display {
     width: 50%;
+    text-align: right;
 }
 
 .overlay h1 {
