--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,10 +1,11 @@
 html {
-  font-family: sans-serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
 }
 body {
   margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 article,
 aside,
@@ -183,7 +184,6 @@ textarea {
   font: inherit;
 }
 html {
-  font: 112.5%/1.45em georgia, serif;
   box-sizing: border-box;
   overflow-y: scroll;
 }
@@ -198,7 +198,6 @@ html {
 }
 body {
   color: hsla(0, 0%, 0%, 0.8);
-  font-family: georgia, serif;
   font-weight: normal;
   word-wrap: break-word;
   font-kerning: normal;
@@ -617,4 +616,13 @@ pre tt:after {
   html {
     font-size: 100%;
   }
+}
+
+h2.serif {
+  font-family: "Georgia", serif;
+  color: #11294B;
+  font-weight: 400;
+  font-size: 2rem;
+  text-align: center;
+  margin-top: 20px;
 }
