--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -39,9 +39,13 @@ header a {
     justify-content: flex-end;
     vertical-align: top;
     font-size: 1.2rem;
-    cursor: pointer;
+    
 }
 
 .menu-icon-space i {
     margin-left: 10px;
+}
+
+.menu-icon-space .soft-button {
+    cursor: pointer;
 }
