modular columns, grid-boxes, resources page

--- a/src/components/banner/image-banner/image-banner.css
+++ b/src/components/banner/image-banner/image-banner.css
@@ -5,6 +5,7 @@
     background-position: center;
     display: flex;
     align-items: center;
+    margin-bottom: 40px;
 }
 
 .image-banner .text-line {
