--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -4,6 +4,9 @@ header {
     padding: 20px 20px;
     font-size: 0;
     height: 100px;
+    width: 100%;
+    position: fixed;
+    z-index: 20;
 }
 
 header a {
