--- a/src/components/grids/two-column/two-column.css
+++ b/src/components/grids/two-column/two-column.css
@@ -1,8 +1,13 @@
 .grid-column {
-    width: 50%;
-    padding: 50px;
+    width: calc(50% - 25px);
+    padding: 30px 0;
     display: inline-block;
     vertical-align: top;
+}
+
+.grid-column:last-of-type {
+    margin-left: 50px;
+
 }
 
 p.serif {
