--- a/src/components/menu/menu.css
+++ b/src/components/menu/menu.css
@@ -45,20 +45,29 @@
     color: #11294B;
     text-transform: uppercase;
     font-size: 3rem;
+    margin-bottom: 5px;
 }
 
 .menu hr {
     border-bottom: 2px solid #11294B;
     background: none;
     margin-bottom: 10px;
+    margin-top: 0;
 }
 
 .menu .menu-option {
     font-family: 'Georgia', serif;
     font-size: 1.3rem;
-    padding: 10px;
+    padding: 10px 0;
     color: #11294B;
-    
+}
+
+.menu .menu-option:hover {
+    color: #048B90;
+}
+
+.menu .active .menu-option {
+    color: #048B90;
 }
 
 .menu a {
