--- a/src/components/grids/grid-box/grid-box.css
+++ b/src/components/grids/grid-box/grid-box.css
@@ -3,13 +3,8 @@
     width: 100%;
 }
 
-.grid-box .navigation {
-    border-bottom: 2px solid #69C8C4;
-}
-
 .grid-box .navigation .tab {
     display: inline-block;
-    color: #69C8C4;
     font-size: 1.6rem;
     margin-right: 30px;
     padding: 10px;
@@ -17,8 +12,64 @@
     cursor: pointer;
 }
 
-.grid-box .navigation .tab:first-of-type {
+.grid-box .navigation .tab.selected {
     font-weight: 700;
+    transition: font-weight 0.1s ease-in-out
+}
+
+/* Support for different themes */
+
+/** Teal (Default)*/
+.grid-box-theme-teal .navigation {
+    border-bottom: 2px solid #69C8C4;
+}
+
+.grid-box-theme-teal .navigation .tab {
+    color: #69C8C4;
+}
+
+.grid-box-theme-teal .navigation {
+    border-bottom: 2px solid #69C8C4;
+}
+
+.grid-box-theme-teal .grid-box-default-slide hr {
+    background: #69C8C4;
+}
+
+/** Purple */
+.grid-box-theme-purple .navigation {
+    border-bottom: 2px solid #A5228E;
+}
+
+.grid-box-theme-purple .navigation .tab {
+    color: #A5228E;
+}
+
+.grid-box-theme-purple .navigation {
+    border-bottom: 2px solid #A5228E;
+}
+
+.grid-box-theme-purple .grid-box-default-slide hr {
+    background: #A5228E;
+}
+
+
+/** Red **/
+
+.grid-box-theme-red .navigation {
+    border-bottom: 2px solid #E74B26;
+}
+
+.grid-box-theme-red .navigation .tab {
+    color: #E74B26;
+}
+
+.grid-box-theme-red .navigation {
+    border-bottom: 2px solid #E74B26;
+}
+
+.grid-box-theme-red .grid-box-default-slide hr {
+    background: #E74B26;
 }
 
 .image-blob {
@@ -29,7 +80,6 @@
 }
 
 .grid-box-default-slide {
-    
     padding: 20px 0;
 }
 
@@ -49,10 +99,21 @@
     width: calc(70% - 20px);
     margin-left: 20px;
     display: inline-block;
-    vertical-align: bottom;
+    vertical-align: top;
 }
 
 .grid-box-default-slide .text-container a {
     font-size: 1.3rem;
     font-family: 'Georgia', serif
+}
+
+.grid-box-default-slide h1 {
+    margin-top: 20px;
+    margin-bottom: 0;
+}
+
+.grid-box-default-slide hr {
+    height: 2px;
+    width: 75%;
+    margin: 10px 0 40px -20%;
 }
