updated element prop passing logic

--- a/src/components/grids/grid-box/grid-box.css
+++ b/src/components/grids/grid-box/grid-box.css
@@ -3,6 +3,16 @@
     width: 100%;
 }
 
+.grid-box  p.serif {
+    font-family: "Georgia", serif;
+    color: #11294B;
+    font-weight: 400;
+    font-size: 1rem;
+    line-height: 1.5rem;
+    text-align: left;
+    margin-bottom: 20px;
+}
+
 .grid-box .navigation .tab {
     display: inline-block;
     font-size: 1.6rem;
@@ -36,6 +46,11 @@
     background: #69C8C4;
 }
 
+.grid-box-theme-teal .grid-box-default-slide .text-container a {
+    color: #69C8C4;
+    border-bottom: 1px solid #69C8C4;
+}
+
 /** Purple */
 .grid-box-theme-purple .navigation {
     border-bottom: 2px solid #A5228E;
@@ -51,6 +66,11 @@
 
 .grid-box-theme-purple .grid-box-default-slide hr {
     background: #A5228E;
+}
+
+.grid-box-theme-purple .grid-box-default-slide .text-container a {
+    color: #A5228E;
+    border-bottom: 1px solid #A5228E;
 }
 
 
@@ -71,6 +91,13 @@
 .grid-box-theme-red .grid-box-default-slide hr {
     background: #E74B26;
 }
+
+.grid-box-theme-red .grid-box-default-slide .text-container a {
+    color: #E74B26;
+    border-bottom: 1px solid #E74B26;
+}
+
+/** Other Elements **/
 
 .image-blob {
     width: 100%;
@@ -100,11 +127,14 @@
     margin-left: 20px;
     display: inline-block;
     vertical-align: top;
+    font-size: 1rem;
 }
 
 .grid-box-default-slide .text-container a {
-    font-size: 1.3rem;
-    font-family: 'Georgia', serif
+    font-size: 1rem;
+    font-family: 'Georgia', serif;
+    padding-bottom: 2px;
+    text-decoration: none;
 }
 
 .grid-box-default-slide h1 {
@@ -113,7 +143,12 @@
 }
 
 .grid-box-default-slide hr {
+    /*
     height: 2px;
     width: 75%;
-    margin: 10px 0 40px -20%;
+    margin: 10px 0 40px -20%;*/
+
+    height: 2px;
+    width: 25%;
+    margin: 20px 0 20px 0;
 }
