--- a/src/components/link-drawer/link-drawer.css
+++ b/src/components/link-drawer/link-drawer.css
@@ -6,7 +6,25 @@
     letter-spacing: 1px;
     cursor: pointer;
  }
+
+ .link-drawer {
+    height: 400px;
+ }
  
  .link-drawer .option:hover {
      color: #258d88;
+ }
+
+
+ .link-drawer .content {
+     padding: 10px;
+ }
+
+ .link-drawer .content.active {
+    font-size: 1rem;
+ }
+
+ .link-drawer .content.inactive {
+    display: none;
+    transition: 1s all ease-in-out;
  }
