--- a/src/components/carousel/carousel.css
+++ b/src/components/carousel/carousel.css
@@ -1,21 +1,34 @@
 
+.carousel {
+    width: 100%;
+    position: relative;
+    padding-top: 30%; /* Aspect Ratio of 32:13 */
+}
+
 .overlay {
     background: #3a3a3a;
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
-    height: 500px;
+    height: 100%;
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
     padding: 20px 40px;
     transition: all 0.5s ease-in-out;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
 .overlay .tile-display {
     width: 60%;
     text-align: right;
     float: right;
+}
+
+.overlay .tile-display.with-background {
+    background: #11294B;
 }
 
 .overlay h1 {
