--- a/src/components/grids/two-column/two-column.css
+++ b/src/components/grids/two-column/two-column.css
@@ -1,16 +1,16 @@
-.grid-column {
+.two-column-grid .grid-column {
     width: calc(50% - 25px);
     padding: 30px 0;
     display: inline-block;
     vertical-align: top;
 }
 
-.grid-column:last-of-type {
+.two-column-grid .grid-column:last-of-type {
     margin-left: 50px;
 
 }
 
-.grid-column p.serif {
+.two-column-grid .grid-column p.serif {
     font-family: "Georgia", serif;
     color: #11294B;
     font-weight: 400;
@@ -20,7 +20,7 @@
     margin-bottom: 20px;
 }
 
-hr {
+.two-column-grid hr {
     width: 100%;
     background-color: #048B90;
     height: 2px;
