--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -23,12 +23,23 @@ header .social-link-row {
     width: calc(100% / 3);
 }
 
-header .floating-block-i {
-    height: 80px;
-    width: 80px;
-    background: #11294B;
+header a.floating-i {
+    height: 60px;
+    width: 60px;
     position: absolute;
     top: 120px;
+}
+
+header .floating-block-i {
+    height: 100%;
+    width: 100%;
+    background-color: #11294B;
+}
+
+header .floating-block-i .image-blob {
+    background-image: contain;
+    background-repeat: no-repeat;
+    background-size: 40%;
 }
 
 .titlespace {
