--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -31,14 +31,14 @@ footer .row h2 {
 }
 
 footer .row p {
-    margin: 10px 0 0 0;
+    margin: 10px 0 10px 0;
     font-size: 1.2rem;
 }
 
 footer .row .cell {
     display: inline-block;
     vertical-align: top;
-    width: calc(100% / 4);
+    width: calc(100% / 6);
     font-size: initial;
 }
 
