--- a/src/components/grids/grid-list/grid-box.css
+++ b/src/components/grids/grid-list/grid-box.css
@@ -3,13 +3,6 @@
     width: 100%;
 }
 
-.grid-box  p.serif {
-    font-family: "Georgia", serif;
-    color: #11294B;
-    font-weight: 400;
-    text-align: left;
-    margin-bottom: 20px;
-}
 
 .grid-box .navigation .tab {
     display: inline-block;
@@ -38,10 +31,6 @@
 
 .grid-box-theme-teal .navigation {
     border-bottom: 2px solid #69C8C4;
-}
-
-.grid-box-theme-teal .grid-box-default-slide hr {
-    background: #69C8C4;
 }
 
 .grid-box-theme-teal .grid-box-default-slide .text-container a {
@@ -109,7 +98,7 @@
 }
 
 .grid-box-default-slide .image-tile {
-    width: 30%;
+    width: 40%;
     vertical-align: top;
     display: inline-block;
     height: 100%;
@@ -121,7 +110,7 @@
 }
 
 .grid-box-default-slide .text-container {
-    width: calc(70% - 20px);
+    width: calc(60% - 20px);
     margin-left: 20px;
     display: inline-block;
     vertical-align: top;
@@ -133,9 +122,16 @@
     text-decoration: none;
 }
 
-.grid-box-default-slide h1 {
+.grid-box-default-slide i {
     margin-top: 20px;
+    font-size: 1.4rem;
+    color: #11294B;
+}
+
+.grid-box-default-slide h1 {
+    margin-top: 0;
     margin-bottom: 0;
+    color: #11294B;
 }
 
 .grid-box-default-slide hr {
