--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -618,12 +618,19 @@ pre tt:after {
   }
 }
 
+h1.serif {
+  font-family: "Georgia", serif;
+  color: #11294B;
+  font-weight: 400;
+  font-size: 38px;
+  margin-bottom: 20px;
+}
+
 h2.serif {
   font-family: "Georgia", serif;
   color: #11294B;
   font-weight: 400;
   font-size: 2rem;
-  text-align: center;
   margin-top: 25px;
 }
 
@@ -645,7 +652,7 @@ h3.serif {
 }
 
 .scd-cw-90 {
-  width: 90%;
+  width: 95%;
   margin: 0 auto;
 }
 
@@ -656,15 +663,41 @@ h3.serif {
 p.serif {
   font-family: "Georgia", serif;
   font-weight: 400;
-  font-size: 1.3rem;
-  line-height: 2rem;
+  font-size: 19px;
+  line-height: 30px;
   text-align: left;
   margin-bottom: 20px;
+}
+
+p.serif a {
+  color: #69C8C4;
+  border-bottom: 1px solid #69C8C4;
+  text-decoration: none;
+}
+
+p.serif a:hover {
+  color: #048B90;
+  border-bottom: 1px solid  #048B90;
+  text-decoration: none;
 }
 
 hr.teal-separator {
   background-color: #048B90;
   height: 2px;
+}
+
+h1.job-listing {
+  color: #11294B;
+  margin: 0;
+  font-size: 2.1rem;
+}
+
+h2.job-listing {
+  font-weight: 400;
+  color: #11294B;
+  margin: 0;
+  font-size: 1.6rem;
+  letter-spacing: 0.8px;
 }
 
 /** Widescreen Display Layout Fixes */
