--- a/src/components/banner/hello/hello.css
+++ b/src/components/banner/hello/hello.css
@@ -11,10 +11,9 @@
 
 .banner .light-block {
     width: 80%;
-    height: 150px;
-    background-color: #E74B26;
+    height: 100px;
+    background-color: #FFD00F;
     z-index: 0;
-    opacity: 0.2;
     position: absolute;
     left: 0; 
     right: 0;
