--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -19,9 +19,6 @@ header a {
     color: inherit;
 }
 
-header .social-link-row {
-    width: calc(100% / 3);
-}
 
 header a.floating-i {
     height: 60px;
@@ -43,11 +40,11 @@ header .floating-block-i .image-blob {
 }
 
 .titlespace {
-    width: calc(100% / 3);
+    width: 70%;
     height: 100%;
     display: inline-flex;
     align-items: center;
-    justify-content: center;
+    justify-content: left;
     text-align: center;
     vertical-align: top;
 }
@@ -59,7 +56,7 @@ header .floating-block-i .image-blob {
 
 .menu-icon-space {
     font-size: initial;
-    width: calc(100% / 3);
+    width: 30%;
     height: 100%;
     display: inline-flex;
     align-items: center;
