--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -4,8 +4,8 @@ html {
 }
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: "Gotham SSm A", "Gotham SSm B", Helvetica, Arial, sans-serif;
+  letter-spacing: -0.5px;
 }
 article,
 aside,
@@ -227,12 +227,12 @@ h1 {
   padding-top: 0;
   margin-bottom: 1.45rem;
   color: inherit;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: "Gotham SSm A", "Gotham SSm B", Helvetica, Arial, sans-serif;
   font-weight: bold;
   text-rendering: optimizeLegibility;
   font-size: 2.25rem;
   line-height: 1.1;
+  letter-spacing: -0.5px;
 }
 h2 {
   margin-left: 0;
@@ -244,12 +244,12 @@ h2 {
   padding-top: 0;
   margin-bottom: 1.45rem;
   color: inherit;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: "Gotham SSm A", "Gotham SSm B", Helvetica, Arial, sans-serif;
   font-weight: bold;
   text-rendering: optimizeLegibility;
   font-size: 1.62671rem;
   line-height: 1.1;
+  letter-spacing: -0.5px;
 }
 h3 {
   margin-left: 0;
@@ -261,12 +261,12 @@ h3 {
   padding-top: 0;
   margin-bottom: 1.45rem;
   color: inherit;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: "Gotham SSm A", "Gotham SSm B", Helvetica, Arial, sans-serif;
   font-weight: bold;
   text-rendering: optimizeLegibility;
   font-size: 1.38316rem;
   line-height: 1.1;
+  letter-spacing: -0.5px;
 }
 h4 {
   margin-left: 0;
@@ -278,12 +278,12 @@ h4 {
   padding-top: 0;
   margin-bottom: 1.45rem;
   color: inherit;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: "Gotham SSm A", "Gotham SSm B", Helvetica, Arial, sans-serif;
   font-weight: bold;
   text-rendering: optimizeLegibility;
   font-size: 1rem;
   line-height: 1.1;
+  letter-spacing: -0.5px;
 }
 h5 {
   margin-left: 0;
@@ -295,12 +295,12 @@ h5 {
   padding-top: 0;
   margin-bottom: 1.45rem;
   color: inherit;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: "Gotham SSm A", "Gotham SSm B", Helvetica, Arial, sans-serif;
   font-weight: bold;
   text-rendering: optimizeLegibility;
   font-size: 0.85028rem;
   line-height: 1.1;
+  letter-spacing: -0.5px;
 }
 h6 {
   margin-left: 0;
@@ -312,12 +312,12 @@ h6 {
   padding-top: 0;
   margin-bottom: 1.45rem;
   color: inherit;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: "Gotham SSm A", "Gotham SSm B", Helvetica, Arial, sans-serif;
   font-weight: bold;
   text-rendering: optimizeLegibility;
   font-size: 0.78405rem;
   line-height: 1.1;
+  letter-spacing: -0.5px;
 }
 hgroup {
   margin-left: 0;
@@ -624,6 +624,7 @@ h1.serif {
   font-weight: 400;
   font-size: 38px;
   margin-bottom: 20px;
+  letter-spacing: 0;
 }
 
 h2.serif {
@@ -632,6 +633,7 @@ h2.serif {
   font-weight: 400;
   font-size: 2rem;
   margin-top: 25px;
+  letter-spacing: 0;
 }
 
 h3.serif {
@@ -641,6 +643,7 @@ h3.serif {
   line-height: 2rem;
   text-align: left;
   margin-bottom: 60px;
+  letter-spacing: 0;
 }
 
 .scd-ptop-100 {
@@ -668,6 +671,7 @@ p.serif {
   line-height: 30px;
   text-align: left;
   margin-bottom: 20px;
+  letter-spacing: 0;
 }
 
 p.serif a {
