--- a/src/components/link-drawer/link-drawer.css
+++ b/src/components/link-drawer/link-drawer.css
@@ -47,6 +47,7 @@
    line-height: 30px;
    color: #11294B;
    margin-bottom: 20px;
+   letter-spacing: 0;
  }
 
  .link-drawer ul li h1 {
@@ -55,6 +56,7 @@
    color: #11294B;
    margin: 0;
    font-family: "Georgia", serif;
+   letter-spacing: 0;
  }
 
  .link-drawer ul li a {
