--- a/src/components/grids/grid-list/grid-box.css
+++ b/src/components/grids/grid-list/grid-box.css
@@ -133,9 +133,10 @@
 }
 
 .grid-box-default-slide h1 {
-    margin-top: 0;
+    margin-top: 10px;
     margin-bottom: 0;
     color: #11294B;
+    font-size: 1.9rem;
 }
 
 .grid-box-default-slide hr {
