--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -19,20 +19,20 @@ footer a {
 
 footer .row h1 {
     margin: 10px 0 10px 0;
-    font-size: 1.3rem;
+    font-size: 1.2rem;
     text-transform: uppercase;
     letter-spacing: 0.2px;
 }
 
 footer .row h2 {
     margin: 0 0 10px 0;
-    font-size: 1.2rem;
+    font-size: 1rem;
     font-weight: 400;
 }
 
 footer .row p {
     margin: 10px 0 10px 0;
-    font-size: 1.1rem;
+    font-size: 0.9rem;
 }
 
 footer .row .cell {
@@ -47,7 +47,7 @@ footer .row .cell.wide {
 }
 
 footer .row .cell.anchor-right-bottom {
-    height: 100px;
+    height: 80px;
     display: inline-flex;
     justify-content: flex-end;
     align-items: flex-end;
@@ -55,4 +55,5 @@ footer .row .cell.anchor-right-bottom {
 
 footer .row .cell.anchor-right-bottom .social-link-row {
     height: initial;
+    margin-top: 0;
 }
