--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -667,8 +667,8 @@ h3.serif {
 p.serif {
   font-family: "Georgia", serif;
   font-weight: 400;
-  font-size: 19px;
-  line-height: 30px;
+  font-size: 1.1rem;
+  line-height: 1.7rem;
   text-align: left;
   margin-bottom: 20px;
   letter-spacing: 0;
