--- a/src/components/link-drawer/link-drawer.css
+++ b/src/components/link-drawer/link-drawer.css
@@ -45,16 +45,16 @@
 
  .link-drawer ul li {
    font-family: "Georgia", serif;
-   font-size: 19px;
-   line-height: 30px;
+   font-size: 1rem;
+   line-height: 1.5rem;
    color: #11294B;
    margin-bottom: 20px;
    letter-spacing: 0;
  }
 
  .link-drawer ul li h1 {
-   font-size: 19px;
-   line-height: 30px;
+  font-size: 1rem;
+  line-height: 1.5rem;
    color: #11294B;
    margin: 0;
    font-family: "Georgia", serif;
