--- a/src/components/banner/hello/hello.css
+++ b/src/components/banner/hello/hello.css
@@ -25,3 +25,22 @@
     font-size: 10rem;
     z-index: 2;
 }
+
+@media (max-width: 800px) {
+
+    .banner {
+        padding: 0;
+        margin: 30px 0;
+    }
+
+    .banner h1 {
+        margin: 0 15px;
+        font-size: 4rem;
+        z-index: 2;
+    }
+
+    .banner .light-block {
+        width: 60%;
+        height: 50px;
+    }
+}
