--- a/src/components/grids/three-element-grid/three-element-grid.css
+++ b/src/components/grids/three-element-grid/three-element-grid.css
@@ -1,8 +1,13 @@
+.three-grid a {
+    text-decoration: none;
+    color: initial;
+}
+
 .three-grid {
     width: 100%;
     z-index: 1;
     position: relative;
-    margin: 80px 0 60px 0;
+    margin: 60px 0 60px 0;
 }
 
 .grid-container {
