--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -56,6 +56,7 @@ footer .row .cell.anchor-right-bottom {
 footer .row .cell.anchor-right-bottom .social-link-row {
     height: initial;
     margin-top: 0;
+    margin-bottom: 10px;
 }
 
   /** General Mobile Display */
