anchoring fixes, team ordering, other minor fixes to footer and content

--- a/src/components/link-drawer/link-drawer.css
+++ b/src/components/link-drawer/link-drawer.css
@@ -72,3 +72,10 @@
    border-bottom: 1px solid  #048B90;
    text-decoration: none;
  }
+
+ .link-drawer a.anchor {
+  display: block;
+  position: relative;
+  top: -200px;
+  visibility: hidden;
+}
