--- a/src/components/snapshot/snapshot.css
+++ b/src/components/snapshot/snapshot.css
@@ -74,3 +74,12 @@
 
 
 }
+
+
+/** Anchor Hack **/
+a.anchor {
+    display: block;
+    position: relative;
+    top: -140px;
+    visibility: hidden;
+}
