--- a/src/components/snapshot/snapshot.css
+++ b/src/components/snapshot/snapshot.css
@@ -13,6 +13,7 @@
     height: 400px;
     width: 100%;
     margin-bottom: 15px;
+    position: relative;
 }
 
 .snapshot .left-column .thumbnail {
@@ -43,6 +44,36 @@
     color: #11294B;
 }
 
+.snapshot .left-column .main-image .arrow-container {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    top: 0;
+    left: 0;
+    padding: 0 15px;
+}
+
+.snapshot .left-column .main-image .arrow-container .arrow-circle {
+    height: 35px;
+    width: 35px;
+    background-color: #11294B;
+    color: #fff;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 35px;
+    cursor: pointer;
+    font-size: 25px;
+    transition: background-color 0.2s ease-in-out;
+}
+
+.snapshot .left-column .main-image .arrow-container .arrow-circle:hover {
+    background-color: #048B90;
+}
+
+
 
 /** General Mobile Display */
 @media (max-width: 800px) {
@@ -51,6 +82,8 @@
         width: 100%;
         display: block;
         margin-bottom: 15px;
+        padding: 0;
+        text-align: center;
     }
     
     .snapshot .left-column .main-image {
@@ -60,8 +93,14 @@
     }
 
     .snapshot .left-column .thumbnail {
-        height: 40px;
-        width: 40px;
+        height: 10px;
+        width: 10px;
+        background: #858585 !important;
+        border-radius: 50%;
+    }
+
+    .snapshot .left-column .thumbnail .image-blob {
+        display: none;
     }
 
     .snapshot .right-column {
@@ -69,15 +108,17 @@
         display: block;
     }
 
-
-
-
+    .snapshot .left-column .main-image .arrow-container {
+        display: none;
+    }
 
 }
 
 
+
+
 /** Anchor Hack **/
-a.anchor {
+span.anchor {
     display: block;
     position: relative;
     top: -140px;
